--- a/style.css
+++ b/style.css
@@ -216,3 +216,49 @@ body {
     border: 0 none;
   }
   
+  @media screen and  (max-width: 980px) {
+    body {
+        width: 100%;
+    }
+
+    .container {
+        width: 100%;
+        height: 50%;
+    }
+
+    #main-container {
+        width: 100%
+    }
+
+  }
+
+  @media screen and (max-width: 768px) {
+      body {
+          width: 75%;
+
+      }
+
+      .container {
+          width: 100%;
+          height: 50%;
+      }
+
+      #main-container {
+          width: 100%;
+      }
+  }
+
+  @media screen and (max-width: 640px) {
+      body {
+          width: 40%;
+      }
+
+      .container {
+          width: 45%;
+          height: 35%;
+      }
+
+      #main-container {
+          width: 100%;
+      }
+  }
