--- a/style.css
+++ b/style.css
@@ -221,6 +221,19 @@ body {
         width: 100%;
     }
 
+    .main-section {
+        width: 100%;
+        height: 100%;
+    }
+
+    .work {
+        width: 45%;
+    }
+
+    #Pic {
+        width: 20%;
+    }
+
     .container {
         width: 100%;
         height: 50%;
@@ -228,6 +241,10 @@ body {
 
     #main-container {
         width: 100%
+    }
+
+    #contact-form {
+        width: 100%;
     }
 
   }
@@ -238,6 +255,19 @@ body {
 
       }
 
+      .main-section {
+        width: 100%;
+        height: 100%;
+    }
+
+    .work {
+        width: 45%;
+    }
+
+      #Pic {
+          width: 40%;
+      }
+
       .container {
           width: 100%;
           height: 50%;
@@ -246,12 +276,38 @@ body {
       #main-container {
           width: 100%;
       }
+      
+      h3 {
+          width: 30%;
+          height: 50%;
+      }
+
+      #contact-form {
+        width: 100%;
+    }
   }
 
   @media screen and (max-width: 640px) {
+      #logo {
+          position: static;
+          width: 100%;
+      }
       body {
           width: 40%;
       }
+
+      .main-section {
+        width: 100%;
+        height: 100%;
+    }
+
+    .work {
+        width: 45%;
+    }
+
+    #Pic {
+        width: 30%;
+    }
 
       .container {
           width: 45%;
@@ -259,6 +315,10 @@ body {
       }
 
       #main-container {
+          width: 200%;
+      }
+
+      #contact-form {
           width: 100%;
       }
   }
